--- a/BlockedFrontend/templates/site.html
+++ b/BlockedFrontend/templates/site.html
@@ -73,6 +73,8 @@
 
 <div>
 <a href="/unblock?url={{url}}" class="btn btn-primary">Request unblock</a>
+
+<a href="{{url}}" target="_blank" class="btn btn-primary">Visit site</a>
 </div>
 
 <div class="row">
