reload changes, random site

--- a/BlockedFrontend/templates/thanks.html
+++ b/BlockedFrontend/templates/thanks.html
@@ -25,6 +25,7 @@
 </p>
 
 <div><a href="/blocked-sites">Unblock another site</a></div>
+<div><a href="/random">Unblock a random site</a></div>
 </div>
 </div>
 
