--- a/BlockedFrontend/templates/feedback.html
+++ b/BlockedFrontend/templates/feedback.html
@@ -1,4 +1,4 @@
-{% extends "BasicPage.html" %}
+{% extends "BasicPage.page.html" %}
 
 {%set pagetitle = domain %}
 {%set pagerole = "Give feedback on a blocked site" %}
