--- a/BlockedFrontend/templates/support.html
+++ b/BlockedFrontend/templates/support.html
@@ -1,4 +1,4 @@
-{% extends "BasicPage.html" %}
+{% extends "BasicPage.page.html" %}
 
 {%set pagetitle = "Taking action against censorship from Internet Service Providers" %}
 
