--- a/BlockedFrontend/templates/unblock.html
+++ b/BlockedFrontend/templates/unblock.html
@@ -1,4 +1,4 @@
-{% extends "BasicPage.html" %}
+{% extends "BasicPage.page.html" %}
 
 {%set pagetitle = domain %}
 {%set pagerole = "Request a site be unblocked" %}
