--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -161,6 +161,8 @@ a.btn-primary, button, input.btn-primary, a.btn-default{
   background-color: black;
   background-image: none;
   border-radius: 0px;
+  color: white;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.2);
 
 }
 
@@ -170,3 +172,24 @@ input.form-control, textarea.form-control, input[type=checkbox] {
 }
 
 
+#loading {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border-radius: 0.25em;
+  background-color: lightgray;
+}
+
+.glyphicon-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 .7s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
+}
