--- a/BlockedFrontend/templates/blocked-sites.html
+++ b/BlockedFrontend/templates/blocked-sites.html
@@ -36,6 +36,8 @@ A great many websites are being blocked mistakenly as a result of government imp
 <div class="row">
 <div class="col-md-12">
 
+<div id="loading">Loading... <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span></div>
+
 <table class="table table-striped table-hover" id="results">
 <!-- 
 <tr>
@@ -48,6 +50,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 <div>
 <button class="btn btn-primary" id="prevpage"><span class="glyphicon glyphicon-backward"></span> Previous Page </button>
 <button class="btn btn-primary" id="nextpage">Next Page <span class="glyphicon glyphicon-forward"></span></button>
+<div>
 
 
 </div>
@@ -66,11 +69,13 @@ A great many websites are being blocked mistakenly as a result of government imp
   
   }
   function getsites(id) {
+    $('#loading').show();
     $.getJSON('/apicategoryresults?cat='+id+'&page='+off, function (data, status, xhr) {
         $('#results').empty();
         $.each(data.sites, function(index, item) {
           additem(item);
         });
+        $('#loading').hide();
     });
   }
   $('#nextpage').click(function() {
@@ -116,11 +121,7 @@ A great many websites are being blocked mistakenly as a result of government imp
         $('#prevpage').hide();
         getsites(catid);
     });
-    $.getJSON('/apicategoryresults?cat=1', function(data, status, xhr) {
-        $.each(data.sites, function (index, item) {
-            additem(item);
-        });
-    });
+    getsites(catid);
   });
   function additem(item) {
     var node = $('<tr><td><h4>'+item.title+'</h4><div>'+item.url+'</div></td>' +
