menu highlight, conditionally show past links

--- a/BlockedFrontend/templates/BasicPage.page.html
+++ b/BlockedFrontend/templates/BasicPage.page.html
@@ -28,11 +28,7 @@
       <img src="https://www.blocked.org.uk/assets/site/blocked/img/blocked-logo.png" alt="Blocked logo" />
     </div>
     <div class="col-md-9 menu">
-      <a href="/">Home</a>
-      <a href="/blocked-sites">Blocked Sites</a>
-      <a href="/about">About</a>
-      <a href="/support">Support</a>
-      <a href="/contact">Contact</a>
+      {{ chunks.main_menu() }}
     </div>
     </div>
     
