server-side blocked-sites page

--- a/BlockedFrontend/templates/BasicPage.page.html
+++ b/BlockedFrontend/templates/BasicPage.page.html
@@ -37,7 +37,7 @@
       <div class="pagerole">{{pagerole}}</div>
       <h1>{{ pagetitle }}</h1>
       {% if url %}
-      <div class="url"><a href="{{url}}" target="_blank">{{url}}</a>
+      <div class="url"><a href="{{url}}" rel="nofollow" target="_blank">{{url}}</a>
       <span class="glyphicon glyphicon-share"></span>
       </div>
       {% endif %}
