--- a/BlockedFrontend/templates/BasicPage.page.html
+++ b/BlockedFrontend/templates/BasicPage.page.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <div class="container">
+
     <div class="row menurow">
     <div class="col-md-3">
       <img src="https://www.blocked.org.uk/assets/site/blocked/img/blocked-logo.png" alt="Blocked logo" />
@@ -56,7 +57,7 @@
 
 
     {% block body %}{%endblock%}
-    </div>
+    </div> <!-- /.container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
