--- a/BlockedFrontend/templates/check.html
+++ b/BlockedFrontend/templates/check.html
@@ -1,6 +1,6 @@
 {% extends "BasicPage.page.html" %}
 
-{%set pagetitle = "Taking action against censorship from Internet Service Providers" %}
+{%set pagetitle = "Check if a site is being blocked" %}
 
 {% block body %}
 
@@ -8,6 +8,7 @@
 <div class="row">
 <div class="col-md-7">
 
+<p>Enter the URL of a website to find out if it is blocked by UK filters. Our tool will check instantly to see where it can be accessed. </p>
 <form action="/site" method="GET" class="form form-inline">
 
 <div class="form-group">
