--- a/BlockedFrontend/templates/blocked-sites.html
+++ b/BlockedFrontend/templates/blocked-sites.html
@@ -27,7 +27,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 </div>
 <div class="pagemenu col-md-4 col-md-offset-4">
 
-<div><a href="#">Browse a random category</a></div>
+<div><a href="{{ url_for('random_category') }}">Browse a random category</a></div>
 <div><a href="#">Check a specific website</a></div>
 
 </div>
@@ -48,7 +48,7 @@ A great many websites are being blocked mistakenly as a result of government imp
     <a href="{{ url_for('site', url=item.url) }}">View site report</a>
   </td>
   <td>
-  {% if item.last_reported == None %}
+  {% if item.last_reported is none %}
   <a class="btn btn-default" href="{{ url_for('unblock', url=item.url) }}">Request Unblock</a>
   {% else %}
   <a class="btn btn-primary btn-disabled" disabled rel="nofollow">Unblock Requested</a>
