--- a/BlockedFrontend/templates/blocked-sites.html
+++ b/BlockedFrontend/templates/blocked-sites.html
@@ -28,7 +28,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 <div class="pagemenu col-md-4 col-md-offset-4">
 
 <div><a href="{{ url_for('random_category') }}">Browse a random category</a></div>
-<div><a href="#">Check a specific website</a></div>
+<div><a href="/check">Check a specific website</a></div>
 
 </div>
 </div> <!-- /.row -->
@@ -38,6 +38,10 @@ A great many websites are being blocked mistakenly as a result of government imp
 
 <div id="categoryname">Blocked sites in category "{{ data.name }}"</div>
 <div id="blockcount">{{ data.total_blocked_url_count }} blocked sites</div>
+
+{% if data.total_blocked_url_count < 100 %}
+<p>To find more blocked sites, try the parent category, <a href="{{ url_for('blocked_sites', category=parentid) }}">{{ parentname }}</a></p>
+{% endif %}
 
 <table class="table table-hover" id="results">
 {% for item in data.sites %}
