--- a/BlockedFrontend/templates/check.html
+++ b/BlockedFrontend/templates/check.html
@@ -9,7 +9,8 @@
 <div class="col-md-7">
 
 <p>Enter the URL of a website to find out if it is blocked by UK filters. Our tool will check instantly to see where it can be accessed. </p>
-<form action="/site" method="GET" class="form form-inline">
+<form action="{{url_for('check_post')}}" method="POST" class="form form-inline">
+<input type="hidden" name="submit" value="{{live | lower }}" />
 
 <div class="form-group">
   <label for="url">Website address</label>
