--- a/BlockedFrontend/templates/blocked-sites.html
+++ b/BlockedFrontend/templates/blocked-sites.html
@@ -28,7 +28,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 </div>
 <div class="pagemenu col-md-4 col-md-offset-4">
 
-<div><a href="{{ url_for('random_category') }}">Browse a random category</a></div>
+<div><a href="{{ url_for('.random_category') }}">Browse a random category</a></div>
 <div><a href="/check">Check a specific website</a></div>
 
 </div>
@@ -41,16 +41,16 @@ A great many websites are being blocked mistakenly as a result of government imp
 <div id="blockcount">{{ data.total_blocked_url_count }} blocked sites</div>
 
 {% if data.total_blocked_url_count < 100 %}
-<p>To find more blocked sites, try the parent category, <a href="{{ url_for('blocked_sites', category=parentid) }}">{{ parentname }}</a></p>
+<p>To find more blocked sites, try the parent category, <a href="{{ url_for('.blocked_sites', category=parentid) }}">{{ parentname }}</a></p>
 {% endif %}
 
 {{ results.results_table(data) }}
 
 <div id="paging">
 {% if page > 0 %}
-<a href="{{ url_for('blocked_sites', category=category, page=page-1) }}" class="btn btn-primary" id="prevpage"><span class="glyphicon glyphicon-backward"></span> Previous Page</a>
+<a href="{{ url_for('.blocked_sites', category=category, page=page-1) }}" class="btn btn-primary" id="prevpage"><span class="glyphicon glyphicon-backward"></span> Previous Page</a>
 {% endif %}
-<a href="{{ url_for('blocked_sites', category=category, page=page+1) }}" class="btn btn-primary" id="nextpage">Next Page <span class="glyphicon glyphicon-forward"></span></a>
+<a href="{{ url_for('.blocked_sites', category=category, page=page+1) }}" class="btn btn-primary" id="nextpage">Next Page <span class="glyphicon glyphicon-forward"></span></a>
 <div>
 
 
