--- a/BlockedFrontend/templates/results.part.html
+++ b/BlockedFrontend/templates/results.part.html
@@ -6,7 +6,7 @@
   <td><h4>{{item.title}}</h4><div>{{item.url}}</div></td>
   <td class="reveal">
     <a href="{{item.url}}" rel="nofollow" target="_blank">Visit Site</a>
-    <a href="{{ url_for('site', url=item.url) }}">View site report</a>
+    <a href="{{ url_for('.site', url=item.url) }}">View site report</a>
   </td>
   <td>
   {% if item.last_reported is none %}
