--- a/BlockedFrontend/templates/site-search.html
+++ b/BlockedFrontend/templates/site-search.html
@@ -16,7 +16,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 <div class="row">
 <div class="col-md-4">
 
-<form class="form category-form" action="{{ url_for('sites_search_post', _method='POST') }}" method="POST">
+<form class="form category-form" action="{{ url_for('.sites_search_post', _method='POST') }}" method="POST">
 <div class="form-group">
 <label for="category">Enter search keywords</label>
 <input type="text" name="search" value="{{ search }}" />
@@ -27,7 +27,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 </div>
 <div class="pagemenu col-md-4 col-md-offset-4">
 
-<div><a href="{{ url_for('random_category') }}">Browse a random category</a></div>
+<div><a href="{{ url_for('.random_category') }}">Browse a random category</a></div>
 <div><a href="/check">Check a specific website</a></div>
 
 </div>
@@ -45,9 +45,9 @@ A great many websites are being blocked mistakenly as a result of government imp
 <div id="paging">
 
 {% if page > 0 %}
-<a href="{{ url_for('sites_search', search=search, page=page-1) }}" class="btn btn-primary" id="prevpage"><span class="glyphicon glyphicon-backward"></span> Previous Page</a>
+<a href="{{ url_for('.sites_search', search=search, page=page-1) }}" class="btn btn-primary" id="prevpage"><span class="glyphicon glyphicon-backward"></span> Previous Page</a>
 {% endif %}
-<a href="{{ url_for('sites_search', search=search, page=page+1) }}" class="btn btn-primary" id="nextpage">Next Page <span class="glyphicon glyphicon-forward"></span></a>
+<a href="{{ url_for('.sites_search', search=search, page=page+1) }}" class="btn btn-primary" id="nextpage">Next Page <span class="glyphicon glyphicon-forward"></span></a>
 <div>
 
 
