Move cms templates

--- a/BlockedFrontend/templates/cms/support.html
+++ b/BlockedFrontend/templates/cms/support.html
@@ -1,5 +1,11 @@
 {% extends "support.page.html" %}
 
+{% block banner_text %}
+Blocked is a free tool.  It was generously funded by our sponsors and Open
+Rights Group (ORG) supporters, and it was built by ORG volunteers.  We
+welcome support of this project, and there are lots of ways you can help.
+{% endblock %}
+
 {%block spread_the_word %}
 
 <p>Sample Para</p>
