update support page text

--- a/BlockedFrontend/templates/cms/support.html
+++ b/BlockedFrontend/templates/cms/support.html
@@ -8,14 +8,21 @@ welcome support of this project, and there are lots of ways you can help.
 
 {%block spread_the_word %}
 
-<p>Sample Para</p>
+<p>We're really interested in hearing compelling stories about censored sites.
+If you're a site owner or you've been prevented from accessing important
+information, please tell us about it. We want as many people as possible to
+blog, tweet, post and comment about filtering and how it affects them.  When
+you hear your friends complaining about site blocking or discussing censorship,
+please send them to this site.</p>
 
 {% endblock %}
 
 
 {%block write_to_your_mp %}
 
-<p>Sample Para</p>
+<p><a href="https://www.blocked.org.uk/email-your-mp">Please write to your
+MP</a> and tell them that you are concerned about the censorship caused by
+filters. Better still meet them in person. </p>
 
 {% endblock %}
 
@@ -29,14 +36,23 @@ welcome support of this project, and there are lots of ways you can help.
 
 {%block join_org %}
 
-<p>Sample Para</p>
+<p>By <a href="https://www.openrightsgroup.org/join/">joining the Open Rights
+Group (ORG)</a>, you can help us to continue to provide Blocked for free. We
+also have <a href="https://www.openrightsgroup.org/groups/">local ORG
+groups</a> where you can get together with like-minded people in your area,
+discuss the issues and take action.</p>
 
 {% endblock %}
 
 
 {%block volunteer %}
 
-<p>Sample Para</p>
+<p>The Blocked project relies on a brilliant group of technical and
+non-technical volunteers. We are always looking for new people to join the
+team. Scroll down for more information about the kind of help and support we
+need. We also have a <a
+href="https://waffle.io/openrightsgroup/cmp-issues">list of cool features</a> we'd like to add in future. Feel free to browse, and if you have any questions,
+shout up on our mailing list.</p>
 
 {% endblock %}
 
