--- a/BlockedFrontend/templates/cms/support.html
+++ b/BlockedFrontend/templates/cms/support.html
@@ -20,9 +20,8 @@ please send them to this site.</p>
 
 {%block write_to_your_mp %}
 
-<p><a href="https://www.blocked.org.uk/email-your-mp">Please write to your
-MP</a> and tell them that you are concerned about the censorship caused by
-filters. Better still meet them in person. </p>
+<p>Please write to your MP and tell them that you are concerned about the
+censorship caused by filters. Better still meet them in person. </p>
 
 {% endblock %}
 
