add paging to keywordsearch

--- a/BlockedFrontend/templates/site-search.html
+++ b/BlockedFrontend/templates/site-search.html
@@ -37,7 +37,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 <div class="col-md-12">
 
 <div id="categoryname">Blocked sites with keywords: "{{ search }}"</div>
-<div id="blockcount">{{ data.sites | length }} blocked sites</div>
+<div id="blockcount">{{ data.count }} blocked sites</div>
 
 
 {{ results.results_table(data) }}
